create awb by sender

--- a/Alicargo/Views/ApplicationList/DetailsTemplate.cshtml
+++ b/Alicargo/Views/ApplicationList/DetailsTemplate.cshtml
@@ -7,29 +7,29 @@
 {
 	if (IdentityService.IsInRole(RoleType.Client))
 	{
-	@:# if(StateId != @StateConfig.CargoReceivedStateId){ #
-	<a href="@Url.Action(MVC.Transit.Edit())/#= TransitId #" class="btn btn-primary">@Pages.Edit.EncodeForKendo()</a>
-	@:# } #
+		@:# if(StateId != @StateConfig.CargoReceivedStateId){ #
+		<a href="@Url.Action(MVC.Transit.Edit())/#= TransitId #" class="btn btn-primary">@Pages.Edit.EncodeForKendo()</a>
+		@:# } #
 		return;
 	}
 
 	if (IdentityService.IsInRole(RoleType.Admin))
 	{
-	<a href="@Url.Action(MVC.Application.Edit())/#= Id #" class="btn btn-primary">@Pages.Edit</a>
-	<button type="button" class="btn btn-danger delete-application">@Pages.Delete</button>
+		<a href="@Url.Action(MVC.Application.Edit())/#= Id #" class="btn btn-primary">@Pages.Edit</a>
+		<button type="button" class="btn btn-danger delete-application">@Pages.Delete</button>
 	}
 
 	if (IdentityService.IsInRole(RoleType.Sender))
 	{
-	<a href="@Url.Action(MVC.Sender.ApplicationEdit())/#= Id #" class="btn btn-primary">@Pages.Edit</a>
-	<button type="button" class="btn btn-danger delete-application">@Pages.Delete</button>
+		<a href="@Url.Action(MVC.Sender.ApplicationEdit())/#= Id #" class="btn btn-primary">@Pages.Edit</a>
+		<button type="button" class="btn btn-danger delete-application">@Pages.Delete</button>
 	}
 }
 
 @helper CloseButton()
 {
 	if (!IdentityService.IsInRole(RoleType.Client) && !IdentityService.IsInRole(RoleType.Admin)) { return; }
-	
+
 	@:# if(CanClose){ #
 	<input class="btn btn-success close-application" type="button" value="@Pages.CargoIsReceived.EncodeForKendo()" />
 	@:# } #
@@ -47,23 +47,30 @@
 		Text = x.Value,
 		Value = x.Key.ToString(CultureInfo.InvariantCulture)
 	}).ToList();
-	list.Insert(0, new SelectListItem { Text = "", Value = "" });
-	@Html.DropDownListFor(x => x.AirWaybills, list, new { @class = "AirWaybill-select" })
+	list.Insert(0, new SelectListItem {Text = "", Value = ""});
+	@Html.DropDownListFor(x => x.AirWaybills, list, new {@class = "AirWaybill-select"})
 }
 
 @helper AirWaybillButton()
 {
-	if (!IdentityService.IsInRole(RoleType.Sender) && !IdentityService.IsInRole(RoleType.Admin)) { return; }
-	
-	<a class="btn btn-inverse" href="@Url.Action(MVC.AirWaybill.Create())/#= Id #">@Pages.AirWaybillAdd</a>
+	if (IdentityService.IsInRole(RoleType.Sender))
+	{
+		<a class="btn btn-inverse" href="@Url.Action(MVC.SenderAwb.Create())/#= Id #">@Pages.AirWaybillAdd</a>
+	}
+	else if (IdentityService.IsInRole(RoleType.Admin))
+	{
+		<a class="btn btn-inverse" href="@Url.Action(MVC.AirWaybill.Create())/#= Id #">@Pages.AirWaybillAdd</a>
+	}
 }
 
 <div class='grid-details'>
 	<div class="properties">
-		@(IdentityService.IsInRole(RoleType.Sender) ? Html.Partial("SenderDetails") : Html.Partial("AdminDetails"))
+		@(IdentityService.IsInRole(RoleType.Sender)
+			  ? Html.Partial("SenderDetails")
+			  : Html.Partial("AdminDetails"))
 	</div>
 	@if (!IdentityService.IsInRole(RoleType.Forwarder))
- {
+	{
 		<hr />
 		<div class="grid-details-toolbar">
 			<div>
@@ -75,5 +82,5 @@
 				</span>
 			</div>
 		</div>
- }
+	}
 </div>
