updated nuget and moved some files

--- a/Alicargo/Views/Authentication/Login.cshtml
+++ b/Alicargo/Views/Authentication/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model SignIdModel
+﻿@model Alicargo.ViewModels.User.SignIdModel
 
 @using (Html.BeginForm(MVC.Authentication.Login(), FormMethod.Post, new { @class = "form-signin" }))
 {
