--- a/Alicargo/Views/User/Create.cshtml
+++ b/Alicargo/Views/User/Create.cshtml
@@ -1,3 +1,3 @@
-﻿@model UserModel
+﻿@model Alicargo.ViewModels.User.UserModel
 
 @Html.EditPage(Resources.Pages.Add, Url.Action(MVC.User.Create()), Resources.Pages.Add)
