creation calculation page

--- a/Alicargo/Views/AirWaybill/Index.cshtml
+++ b/Alicargo/Views/AirWaybill/Index.cshtml
@@ -27,6 +27,7 @@
 	@Scripts.Render(Url.Action(MVC.DynamicScript.Roles()))
 	@Scripts.Render(Url.Action(MVC.DynamicScript.Localization()))
 	@Scripts.Render(Url.Action(MVC.DynamicScript.Urls()))
+	@Scripts.Render("~/Scripts/app/Alicargo.js")
 	@Scripts.Render("~/Scripts/app/AirWaybill/Columns.js")
 	@Scripts.Render("~/Scripts/app/AirWaybill/Grid.js")
 }
