--- a/Alicargo/Views/Client/Index.cshtml
+++ b/Alicargo/Views/Client/Index.cshtml
@@ -13,5 +13,6 @@
 {
 	@Scripts.Render(Url.Action(MVC.DynamicScript.Localization()))
 	@Scripts.Render(Url.Action(MVC.DynamicScript.Urls()))
+	@Scripts.Render("~/Scripts/app/Alicargo.js")
 	@Scripts.Render("~/Scripts/app/Client/Grid.js")
 }
