--- a/Alicargo/Views/DynamicScript/Urls.cshtml
+++ b/Alicargo/Views/DynamicScript/Urls.cshtml
@@ -15,6 +15,8 @@ $u.Broker_AWB = "@Url.Action(MVC.Broker.AWB())";
 $u.Client_List = "@Url.Action(MVC.Client.List())";
 $u.Client_Edit = "@Url.Action(MVC.Client.Edit())";
 
+$u.Calculation_List = "@Url.Action(MVC.Calculation.List())";
+
 return $u;
 }($a.Urls || {}));
 
