log Application start
and fixed some bugs

--- a/Alicargo/Views/ApplicationList/SenderColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/SenderColumns.cshtml
@@ -2,7 +2,7 @@
 @inherits BaseWebViewPage<ApplicationIndexModel>
 
 var columns = [
-{ field: "ClientNic", title: '@Entities.Nic', groupable: true },
+{ field: "ClientNic", title: '@Entities.Nic', groupable: false },
 { field: "DisplayNumber", title: '@Entities.DisplayNumber', width: "70px", groupable: false },
 { field: "FactoryName", title: '@Entities.FactoryName', groupable: false },
 { field: "MarkName", title: '@Entities.Mark', groupable: false },
