updated format of weight and count fileds

--- a/Alicargo/Views/ApplicationList/AdminColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminColumns.cshtml
@@ -11,8 +11,8 @@ var columns = [
 { field: "DisplayNumber", title: '@Entities.DisplayNumber', groupable: false, width: "60px" },
 { field: "FactoryName", title: '@Entities.FactoryName', groupable: false, width: "100px" },
 { field: "MarkName", title: '@Entities.Mark', groupable: false, width: "100px" },
-{ field: "Count", title: '@Entities.Count', groupable: false, width: "35px", groupFooterTemplate: "#= Count.sum #" },
-{ field: "Weigth", title: '@Entities.Weigth', groupable: false, width: "35px", groupFooterTemplate: "#= Weigth.sum #" },
+{ field: "Count", title: '@Entities.Count', groupable: false, width: "35px", groupFooterTemplate: "#= Count.sum #", format: "{0:n0}" },
+{ field: "Weigth", title: '@Entities.Weigth', groupable: false, width: "46px", groupFooterTemplate: "#= kendo.toString(Weigth.sum, 'n2') #", format: "{0:n2}" },
 { field: "Invoice", title: '@Entities.Invoice', groupable: false, width: "150px" },
 { field: "ValueString", title: '@Entities.Value', groupable: false, width: "70px" },
 { field: "TransitMethodOfTransitString", title: '@Entities.MethodOfTransit', groupable: false, width: "75px" },
