--- a/Alicargo/Views/ApplicationList/ClientColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/ClientColumns.cshtml
@@ -8,8 +8,8 @@ var columns = [
 { field: "DisplayNumber", title: '@Entities.DisplayNumber', width: "70px", groupable: false },
 { field: "FactoryName", title: '@Entities.FactoryName', groupable: false },
 { field: "MarkName", title: '@Entities.Mark', groupable: false },
-{ field: "Count", title: '@Entities.Count', groupable: false, width: "35px" },
-{ field: "Weigth", title: '@Entities.Weigth', groupable: false, width: "35px" },
+{ field: "Count", title: '@Entities.Count', groupable: false, width: "35px", format: "{0:n0}" },
+{ field: "Weigth", title: '@Entities.Weigth', groupable: false, width: "46x", format: "{0:n2}" },
 { field: "Invoice", title: '@Entities.Invoice', groupable: false },
 { field: "ValueString", title: '@Entities.Value', groupable: false, width: "70px" },
 { field: "TransitMethodOfTransitString", title: '@Entities.MethodOfTransit', groupable: false },
