--- a/Alicargo/Views/ApplicationList/ForwarderColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/ForwarderColumns.cshtml
@@ -5,8 +5,8 @@ var columns = [
 { field: "State", title: '@Entities.StateName', groupable: true, editor: stateDropDownEditor, template: "#= State.StateName #", width: "150px" },
 { field: "ClientLegalEntity", title: '@Entities.LegalEntity', groupable: true, width: "150px" },
 { field: "DisplayNumber", title: '@Entities.DisplayNumber', width: "70px", groupable: false },
-{ field: "Count", title: '@Entities.Count', groupable: false, width: "35px", groupFooterTemplate: "#= Count.sum #" },
-{ field: "Weigth", title: '@Entities.Weigth', groupable: false, width: "35px", groupFooterTemplate: "#= Weigth.sum #" },
+{ field: "Count", title: '@Entities.Count', groupable: false, width: "35px", groupFooterTemplate: "#= Count.sum #", format: "{0:n0}" },
+{ field: "Weigth", title: '@Entities.Weigth', groupable: false, width: "46px", groupFooterTemplate: "#= kendo.toString(Weigth.sum, 'n2') #", format: "{0:n2}" },
 { field: "TransitCarrierName", title: '@Entities.CarrierName', groupable: false, width: "100px" },
 { field: "TransitMethodOfTransitString", title: '@Entities.MethodOfTransit', groupable: false, width: "75px" },
 { field: "TransitCity", title: '@Entities.City', groupable: false, width: "100px" },
