added grouping by client nic
Revert "Merge branch 'master' into Release_1.1"

This reverts commit 04eb13bfc42bfe7e151cf8e0f5dea28cf64aeb66, reversing
changes made to 1cba4e2d76a8eb8e6612f8accb50320b235a3c88.

--- a/Alicargo/Views/ApplicationList/AdminColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminColumns.cshtml
@@ -6,7 +6,7 @@ var columns = [
 { field: "State", title: '@Entities.StateName', groupable: true, width: "150px", editor: stateDropDownEditor, template: "#= State.StateName #" },
 { field: "DateOfCargoReceiptLocalString", title: '@Entities.DateOfCargoReceipt', groupable: false, editor: dateEditor, width: "90px", template: "#= DateOfCargoReceiptLocalString == null ? '' : kendo.toString(DateOfCargoReceiptLocalString, 'd') #" },
 { field: "DateInStockLocalString", title: '@Entities.DateInStock', groupable: false, width: "90px" },
-{ field: "ClientNic", title: '@Entities.Nic', groupable: false, width: "100px" },
+{ field: "ClientNic", title: '@Entities.Nic', groupable: true, width: "100px" },
 { field: "DisplayNumber", title: '@Entities.DisplayNumber', groupable: false, width: "60px" },
 { field: "CountryName", title: '@Entities.Country', groupable: false, width: "70px" },
 { field: "FactoryName", title: '@Entities.FactoryName', groupable: false, width: "100px" },
