--- a/Alicargo/Views/ApplicationList/SenderColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/SenderColumns.cshtml
@@ -2,7 +2,7 @@
 @inherits BaseWebViewPage<ApplicationIndexModel>
 
 var columns = [
-{ field: "ClientNic", title: '@Entities.Nic', groupable: false },
+{ field: "ClientNic", title: '@Entities.Nic', groupable: true },
 { field: "DisplayNumber", title: '@Entities.DisplayNumber', width: "70px", groupable: false },
 { field: "CountryName", title: '@Entities.Country', groupable: false, width: "70px" },
 { field: "FactoryName", title: '@Entities.FactoryName', groupable: false },
