--- a/Alicargo/Views/AirWaybill/Create.cshtml
+++ b/Alicargo/Views/AirWaybill/Create.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Alicargo.Helpers
+@using Alicargo.MvcHelpers
 @model Alicargo.ViewModels.AirWaybill.AirWaybillEditModel
 
 @Html.EditPage(Resources.Pages.AirWaybillAdd, Url.Action(MVC.AirWaybill.Create()), Resources.Pages.AirWaybillAdd)
