--- a/Alicargo/Views/Application/EditorTemplates/ApplicationEditModel.cshtml
+++ b/Alicargo/Views/Application/EditorTemplates/ApplicationEditModel.cshtml
@@ -1,7 +1,8 @@
 ﻿@using System.Globalization
 @using Alicargo.Core.Localization
+@using Alicargo.MvcHelpers
 @using Resources
-@inherits BaseWebViewPage<ApplicationEditModel>
+@inherits Alicargo.MvcHelpers.BaseWebViewPage<ApplicationEditModel>
 
 @helper SelectCountry()
 {
