--- a/Alicargo/Views/ApplicationList/ClientColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/ClientColumns.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Resources
-@inherits BaseWebViewPage<ApplicationIndexModel>
+@inherits Alicargo.MvcHelpers.BaseWebViewPage<ApplicationIndexModel>
 
 var columns = [
 { field: "CreationTimestampLocalString", title: '@Entities.CreationTimestamp', groupable: false, width: "70px" },
