--- a/Alicargo/Views/ApplicationList/DetailsTemplate.cshtml
+++ b/Alicargo/Views/ApplicationList/DetailsTemplate.cshtml
@@ -1,7 +1,8 @@
 ﻿@using System.Globalization
 @using Alicargo.Contracts.Enums
+@using Alicargo.MvcHelpers
 @using Resources
-@inherits BaseWebViewPage<ApplicationIndexModel>
+@inherits Alicargo.MvcHelpers.BaseWebViewPage<ApplicationIndexModel>
 
 @helper EditButton()
 {
