--- a/Alicargo/Views/ApplicationList/SenderColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/SenderColumns.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Resources
-@inherits BaseWebViewPage<ApplicationIndexModel>
+@inherits Alicargo.MvcHelpers.BaseWebViewPage<ApplicationIndexModel>
 
 var columns = [
 { field: "ClientNic", title: '@Entities.Nic', groupable: true },
