--- a/Alicargo/Views/ApplicationList/Tools.cshtml
+++ b/Alicargo/Views/ApplicationList/Tools.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits BaseWebViewPage<ApplicationIndexModel>
+﻿@inherits Alicargo.MvcHelpers.BaseWebViewPage<ApplicationIndexModel>
 @using Alicargo.Contracts.Enums
 @using Resources
 
