--- a/Alicargo/Views/Broker/AWB.cshtml
+++ b/Alicargo/Views/Broker/AWB.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Alicargo.Helpers
+@using Alicargo.MvcHelpers
 @model Alicargo.ViewModels.AirWaybill.BrokerAwbModel
 <h3>
 	@Resources.Entities.AWB:
