--- a/Alicargo/Views/Calculation/Index.cshtml
+++ b/Alicargo/Views/Calculation/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Resources
-@inherits BaseWebViewPage
+@inherits Alicargo.MvcHelpers.BaseWebViewPage
 <style>
 	.container {
 		padding: 0 20px;
