--- a/Alicargo/Views/Client/Create.cshtml
+++ b/Alicargo/Views/Client/Create.cshtml
@@ -1,3 +1,4 @@
-﻿@model ClientModel
+﻿@using Alicargo.MvcHelpers
+@model ClientModel
 
 @Html.EditPage(Resources.Pages.ClientAdd, Url.Action(MVC.Client.Create()), Resources.Pages.Add)
