--- a/Alicargo/Views/Client/Edit.cshtml
+++ b/Alicargo/Views/Client/Edit.cshtml
@@ -1,3 +1,4 @@
-﻿@model ClientModel
+﻿@using Alicargo.MvcHelpers
+@model ClientModel
 
 @Html.EditPage(Resources.Pages.ClientEdit, Url.Action(MVC.Client.Edit()), Resources.Pages.Save)
