--- a/Alicargo/Views/DynamicScript/Localization.cshtml
+++ b/Alicargo/Views/DynamicScript/Localization.cshtml
@@ -1,7 +1,8 @@
 ﻿@using System.Reflection
 @using System.Resources
+@using Alicargo.MvcHelpers
 @using Resources
-@inherits BaseWebViewPage
+@inherits Alicargo.MvcHelpers.BaseWebViewPage
 
 @helper Generate(string prefix, ResourceManager manager, Type type)
 {
