--- a/Alicargo/Views/DynamicScript/Roles.cshtml
+++ b/Alicargo/Views/DynamicScript/Roles.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Alicargo.Contracts.Enums
-@inherits BaseWebViewPage
+@inherits Alicargo.MvcHelpers.BaseWebViewPage
 
 var Alicargo = (function($a){
 
