--- a/Alicargo/Views/SenderAwb/Edit.cshtml
+++ b/Alicargo/Views/SenderAwb/Edit.cshtml
@@ -1,3 +1,4 @@
-﻿@model Alicargo.ViewModels.AirWaybill.SenderAwbModel
+﻿@using Alicargo.MvcHelpers
+@model Alicargo.ViewModels.AirWaybill.SenderAwbModel
 
 @Html.EditPage("", Url.Action(MVC.SenderAwb.Edit()), Resources.Pages.Save)
