--- a/Alicargo/Views/SenderAwb/EditorTemplates/SenderAwbModel.cshtml
+++ b/Alicargo/Views/SenderAwb/EditorTemplates/SenderAwbModel.cshtml
@@ -1,5 +1,6 @@
-﻿@using Resources
-@inherits BaseWebViewPage<Alicargo.ViewModels.AirWaybill.SenderAwbModel>
+﻿@using Alicargo.MvcHelpers
+@using Resources
+@inherits Alicargo.MvcHelpers.BaseWebViewPage<Alicargo.ViewModels.AirWaybill.SenderAwbModel>
 
 @helper SelectBroker()
 {
