--- a/Alicargo/Views/Shared/EditorTemplates/TransitEditModel.cshtml
+++ b/Alicargo/Views/Shared/EditorTemplates/TransitEditModel.cshtml
@@ -1,5 +1,6 @@
 ﻿@using System.Web.Mvc.Html
 @using Alicargo.Core.Localization
+@using Alicargo.MvcHelpers
 @model TransitEditModel
 
 <div class="row">
