--- a/Alicargo/Views/Shared/Memu.cshtml
+++ b/Alicargo/Views/Shared/Memu.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Alicargo.Contracts.Enums
 @using Resources
-@inherits BaseWebViewPage
+@inherits Alicargo.MvcHelpers.BaseWebViewPage
 
 @helper ClientMenu()
 {
