--- a/Alicargo/Views/Transit/Edit.cshtml
+++ b/Alicargo/Views/Transit/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model TransitEditModel
+﻿@using Alicargo.MvcHelpers
+@model TransitEditModel
 
 <ul class="nav nav-tabs" id="transit-tabs">
 	<li><a href="#transit-data">@Resources.Pages.Transit</a></li>
