--- a/Alicargo/Views/User/Edit.cshtml
+++ b/Alicargo/Views/User/Edit.cshtml
@@ -1,3 +1,4 @@
-﻿@model Alicargo.ViewModels.User.UserModel
+﻿@using Alicargo.MvcHelpers
+@model Alicargo.ViewModels.User.UserModel
 
 @Html.EditPage(Resources.Pages.Edit, Url.Action(MVC.User.Edit()), Resources.Pages.Edit)
