--- a/Alicargo/Views/User/EditorTemplates/UserModel.cshtml
+++ b/Alicargo/Views/User/EditorTemplates/UserModel.cshtml
@@ -1,4 +1,5 @@
-﻿@model Alicargo.ViewModels.User.UserModel
+﻿@using Alicargo.MvcHelpers
+@model Alicargo.ViewModels.User.UserModel
 
 <div class="row">
 	<div class="span4">
