--- a/Alicargo/Views/AirWaybill/CargoIsCustomsClearedButton.cshtml
+++ b/Alicargo/Views/AirWaybill/CargoIsCustomsClearedButton.cshtml
@@ -1,4 +1,5 @@
-﻿@using Resources
+﻿@using Alicargo.MvcHelpers
+@using Resources
 @model CargoIsCustomsClearedButtonModel
 
 @{ var disabled = !Model.CanSetCargoIsCustomsCleared; }
