--- a/Alicargo/Views/AirWaybill/Edit.cshtml
+++ b/Alicargo/Views/AirWaybill/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@using Resources
+﻿@using Alicargo.MvcHelpers
+@using Resources
 @model Alicargo.ViewModels.AirWaybill.AirWaybillEditModel
 
 @Html.EditPage(Pages.AirWaybillEdit, Url.Action(MVC.AirWaybill.Edit()), Pages.Save, @Html.Action(MVC.AirWaybill.CargoIsCustomsClearedButton((long)ViewBag.AwbId)))
