--- a/Alicargo/Views/AirWaybill/EditorTemplates/AirWaybillEditModel.cshtml
+++ b/Alicargo/Views/AirWaybill/EditorTemplates/AirWaybillEditModel.cshtml
@@ -1,5 +1,6 @@
-﻿@using Resources
-@inherits BaseWebViewPage<Alicargo.ViewModels.AirWaybill.AirWaybillEditModel>
+﻿@using Alicargo.MvcHelpers
+@using Resources
+@inherits Alicargo.MvcHelpers.BaseWebViewPage<Alicargo.ViewModels.AirWaybill.AirWaybillEditModel>
 
 @helper SelectBroker()
 {
