--- a/Alicargo/Views/AirWaybill/SenderDetails.cshtml
+++ b/Alicargo/Views/AirWaybill/SenderDetails.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Resources
-@inherits BaseWebViewPage<Dictionary<long, string>>
+@inherits Alicargo.MvcHelpers.BaseWebViewPage<Dictionary<long, string>>
 
 <div class='grid-details'>
 	<div class="properties">
