--- a/Alicargo/Views/Application/DisplayTemplates/ApplicationDetailsModel.cshtml
+++ b/Alicargo/Views/Application/DisplayTemplates/ApplicationDetailsModel.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.Ajax.Utilities
+﻿@using Alicargo.MvcHelpers
+@using Microsoft.Ajax.Utilities
 @using Resources
 @model ApplicationDetailsModel
 
