--- a/Alicargo/Views/Broker/EditorTemplates/BrokerAwbModel.cshtml
+++ b/Alicargo/Views/Broker/EditorTemplates/BrokerAwbModel.cshtml
@@ -1,4 +1,5 @@
-﻿@using Resources
+﻿@using Alicargo.MvcHelpers
+@using Resources
 @model Alicargo.ViewModels.AirWaybill.BrokerAwbModel
 
 <div class="row">
