--- a/Alicargo/Views/Sender/ApplicationEdit.cshtml
+++ b/Alicargo/Views/Sender/ApplicationEdit.cshtml
@@ -1,4 +1,5 @@
-﻿@using Resources
+﻿@using Alicargo.MvcHelpers
+@using Resources
 @model ApplicationSenderEdit
 
 <h4 style="margin-top: 33px;" class="pull-right">@Entities.Nic: @ViewBag.Nic</h4>
