--- a/Alicargo/Views/User/Create.cshtml
+++ b/Alicargo/Views/User/Create.cshtml
@@ -1,3 +1,4 @@
-﻿@model Alicargo.ViewModels.User.UserModel
+﻿@using Alicargo.MvcHelpers
+@model Alicargo.ViewModels.User.UserModel
 
 @Html.EditPage(Resources.Pages.Add, Url.Action(MVC.User.Create()), Resources.Pages.Add)
