added dynamic script for states
refactored application grid

--- a/Alicargo/Views/Broker/AWB.cshtml
+++ b/Alicargo/Views/Broker/AWB.cshtml
@@ -1,5 +1,4 @@
-﻿@using Alicargo.Helpers
-@using Alicargo.MvcHelpers
+﻿@using Alicargo.MvcHelpers
 @model Alicargo.ViewModels.AirWaybill.BrokerAwbModel
 <h3>
 	@Resources.Entities.AWB:
