--- a/Alicargo/Views/DynamicScript/Urls.cshtml
+++ b/Alicargo/Views/DynamicScript/Urls.cshtml
@@ -1,4 +1,5 @@
-﻿@inherits Alicargo.MvcHelpers.BaseWebViewPage<DynamicScriptMethodDescription[]>
+﻿@model DynamicScriptMethodDescription[]
+
 var Alicargo = (function($a){$a.Urls = (function($u){
 @foreach (var item in Model)
 {
