--- a/Alicargo/Views/SenderAwb/Create.cshtml
+++ b/Alicargo/Views/SenderAwb/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using Alicargo.Helpers
-@using Alicargo.MvcHelpers
+﻿@using Alicargo.MvcHelpers
 @model Alicargo.ViewModels.AirWaybill.SenderAwbModel
 
 @Html.EditPage(Resources.Pages.AirWaybillAdd, Url.Action(MVC.SenderAwb.Create()), Resources.Pages.AirWaybillAdd)
