--- a/Alicargo/Views/AirWaybill/Index.cshtml
+++ b/Alicargo/Views/AirWaybill/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Alicargo.Contracts.Enums
-@inherits Alicargo.MvcHelpers.BaseWebViewPage
+@inherits BaseWebViewPage
 <style>
 	.container {
 		padding: 0 20px;
