--- a/Alicargo/Views/ApplicationList/DetailsTemplate.cshtml
+++ b/Alicargo/Views/ApplicationList/DetailsTemplate.cshtml
@@ -2,7 +2,7 @@
 @using Alicargo.Contracts.Enums
 @using Alicargo.MvcHelpers
 @using Resources
-@inherits Alicargo.MvcHelpers.BaseWebViewPage<ApplicationIndexModel>
+@inherits BaseWebViewPage<ApplicationIndexModel>
 
 @helper EditButton()
 {
