cost fields for admin

--- a/Alicargo/Views/ApplicationList/AdminDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminDetails.cshtml
@@ -151,6 +151,42 @@
 	#= FactoryContact #
 </p>
 # } #
+# if(FactureCost != null){ #
+<p>
+	<span>@Entities.FactureCost:</span>
+	#= FactureCost #
+</p>
+# } #
+# if(ScotchCost != null){ #
+<p>
+	<span>@Entities.ScotchCost:</span>
+	#= ScotchCost #
+</p>
+# } #
+# if(TariffPerKg != null){ #
+<p>
+	<span>@Entities.TariffPerKg:</span>
+	#= TariffPerKg #
+</p>
+# } #
+# if(TransitCost != null){ #
+<p>
+	<span>@Entities.TransitCost:</span>
+	#= TransitCost #
+</p>
+# } #
+# if(WithdrawCost != null){ #
+<p>
+	<span>@Entities.WithdrawCost:</span>
+	#= WithdrawCost #
+</p>
+# } #
+# if(ForwarderCost != null){ #
+<p>
+	<span>@Entities.ForwarderCost:</span>
+	#= ForwarderCost #
+</p>
+# } #
 # if(InvoiceFileName != null){ #
 <p>
 	<span>@Entities.Invoice:</span>
