cost fields for sender

--- a/Alicargo/Views/ApplicationList/SenderDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/SenderDetails.cshtml
@@ -102,6 +102,24 @@
 	#= FactoryContact #
 </p>
 # } #
+# if(FactureCost != null){ #
+<p>
+	<span>@Entities.FactureCost:</span>
+	#= FactureCost #
+</p>
+# } #
+# if(ScotchCost != null){ #
+<p>
+	<span>@Entities.ScotchCost:</span>
+	#= ScotchCost #
+</p>
+# } #
+# if(WithdrawCost != null){ #
+<p>
+	<span>@Entities.WithdrawCost:</span>
+	#= WithdrawCost #
+</p>
+# } #
 # if(InvoiceFileName != null){ #
 <p>
 	<span>@Entities.Invoice:</span>
