--- a/Alicargo/Views/Sender/EditorTemplates/ApplicationSenderEdit.cshtml
+++ b/Alicargo/Views/Sender/EditorTemplates/ApplicationSenderEdit.cshtml
@@ -6,14 +6,17 @@
 		@Html.EditorWithLabelFor(model => model.FactoryName)
 		@Html.EditorWithLabelFor(model => model.MarkName)
 		@Html.EditorWithLabelFor(model => model.Invoice)
+		@Html.EditorWithLabelFor(model => model.FactureCost)
 	</div>
 	<div class="span4">
 		@Html.EditorWithLabelFor(model => model.Weigth)
 		@Html.EditorWithLabelFor(model => model.Count)
+		@Html.EditorWithLabelFor(model => model.ScotchCost)
 	</div>
 	<div class="span4">
 		@Html.EditorWithLabelFor(model => model.Currency)
 		@Html.EditorWithLabelFor(model => model.Volume)
+		@Html.EditorWithLabelFor(model => model.WithdrawCost)
 	</div>
 </div>
 <div class="row">
