--- a/Alicargo/Views/SenderAwb/EditorTemplates/SenderAwbModel.cshtml
+++ b/Alicargo/Views/SenderAwb/EditorTemplates/SenderAwbModel.cshtml
@@ -43,6 +43,7 @@
 			<div class="date-holder">
 				@Html.EditorFor(model => model.DateOfDepartureLocalString)
 			</div>
+			@Html.EditorWithLabelFor(model => model.TotalCostOfSenderForWeight)
 		</div>
 		<div class="span4">
 			@Html.EditorWithLabelFor(model => model.ArrivalAirport)
