show total profit

--- a/Alicargo/Views/Calculation/Details.cshtml
+++ b/Alicargo/Views/Calculation/Details.cshtml
@@ -82,7 +82,7 @@
 		</p>
 		<p>
 			<b>
-				<span>@Entities.Profit:</span>
+				<span>@Entities.TotalProfit:</span>
 				#= kendo.toString(Profit, 'n2') #
 			</b>
 		</p>
