--- a/Alicargo/Views/Application/EditorTemplates/ApplicationEditModel.cshtml
+++ b/Alicargo/Views/Application/EditorTemplates/ApplicationEditModel.cshtml
@@ -60,12 +60,31 @@
 	</div>
 </div>
 <div class="row">
+	<div class="span2">
+		@Html.EditorWithLabelFor(model => model.FactureCost)
+	</div>
+	<div class="span2">
+		@Html.EditorWithLabelFor(model => model.FactureCostEdited)
+	</div>
+	<div class="span2">
+		@Html.EditorWithLabelFor(model => model.ScotchCost)
+	</div>
+	<div class="span2">
+		@Html.EditorWithLabelFor(model => model.ScotchCostEdited)
+	</div>
+	<div class="span2">
+		@Html.EditorWithLabelFor(model => model.WithdrawCost)
+	</div>
+	<div class="span2">
+		@Html.EditorWithLabelFor(model => model.WithdrawCostEdited)
+	</div>
+</div>
+<div class="row">
 	<div class="span4">
 		@Html.EditorWithLabelFor(model => model.Count)
 		<label for="@Html.IdFor(x => x.Volume)">@Entities.Volume (m<span class="super">3</span> )</label>
 		@Html.EditorFor(model => model.Volume)
 		@Html.EditorWithLabelFor(model => model.ForwarderCost)
-		@Html.EditorWithLabelFor(model => model.FactureCost)
 	</div>
 	<div class="span4">
 		@Html.EditorWithLabelFor(model => model.TermsOfDelivery)
@@ -76,13 +95,11 @@
 								  Text = name,
 								  Value = ((int)item).ToString(CultureInfo.InvariantCulture)
 							  }))
-		@Html.EditorWithLabelFor(model => model.ScotchCost)
 		@Html.EditorWithLabelFor(model => model.TransitCost)
 	</div>
 	<div class="span4">
 		@Html.EditorWithLabelFor(model => model.WarehouseWorkingTime)
 		@Html.EditorWithLabelFor(model => model.Currency)
-		@Html.EditorWithLabelFor(model => model.WithdrawCost)
 		@Html.EditorWithLabelFor(model => model.TariffPerKg)
 	</div>
 </div>
