--- a/Alicargo/Content/app/entity.css
+++ b/Alicargo/Content/app/entity.css
@@ -11,8 +11,8 @@
 	}
 
 	.entity-edit .span8 textarea {
-		width: 756px;
 		height: 85px;
+		width: 756px;
 	}
 
 	.entity-edit .span4 .currency-holder input {
@@ -32,8 +32,8 @@
 	}
 
 	.entity-edit .span4 textarea {
-		width: 356px;
 		height: 85px;
+		width: 356px;
 	}
 
 	.entity-edit .span4 .ui-tabs {
@@ -59,8 +59,8 @@
 	}
 
 .grid {
-	margin-bottom: 20px;
 	font-size: 8pt;
+	margin-bottom: 20px;
 }
 
 	.grid .btn {
@@ -131,3 +131,11 @@
 	.calculation-details p {
 		margin-bottom: 5px;
 	}
+
+	.calculation-details .additional-cost {
+		margin-bottom: 1px;
+	}
+
+		.calculation-details .additional-cost .k-numerictextbox {
+			width: 50px;
+		}
