rebind grid after edit

--- a/Alicargo/Content/app/entity.css
+++ b/Alicargo/Content/app/entity.css
@@ -134,6 +134,7 @@
 
 	.calculation-details .additional-cost {
 		margin-bottom: 1px;
+		height: 23px;
 	}
 
 		.calculation-details .additional-cost .k-numerictextbox {
