--- a/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
+++ b/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
@@ -2,7 +2,7 @@
 @using Alicargo.Core.Localization
 @using Alicargo.MvcHelpers
 @using Resources
-@inherits Alicargo.MvcHelpers.BaseWebViewPage<ApplicationEditModel>
+@inherits Alicargo.MvcHelpers.BaseWebViewPage<ApplicationAdminModel>
 
 @helper SelectCountry()
 {
