--- a/Alicargo/Views/Application/Edit.cshtml
+++ b/Alicargo/Views/Application/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Alicargo.MvcHelpers
 @using Resources
-@model ApplicationEditModel
+@model ApplicationAdminModel
 
 <h4 style="margin-top: 33px;" class="pull-right">@Entities.Nic: @Html.ViewBag.ClientNic</h4>
 @Html.EditPage(Pages.ApplicationEdit, Url.Action(MVC.Application.Edit()), Pages.Update)
