--- a/Alicargo/Views/AirWaybill/EditorTemplates/AwbAdminModel.cshtml
+++ b/Alicargo/Views/AirWaybill/EditorTemplates/AwbAdminModel.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Alicargo.MvcHelpers
 @using Resources
-@inherits BaseWebViewPage<Alicargo.ViewModels.AirWaybill.AirWaybillEditModel>
+@inherits BaseWebViewPage<Alicargo.ViewModels.AirWaybill.AwbAdminModel>
 
 @helper SelectBroker()
 {
