--- a/Alicargo/Views/Broker/AWB.cshtml
+++ b/Alicargo/Views/Broker/AWB.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Alicargo.MvcHelpers
-@model Alicargo.ViewModels.AirWaybill.BrokerAwbModel
+@model Alicargo.ViewModels.AirWaybill.AwbBrokerModel
 <h3>
 	@Resources.Entities.AWB:
 	@ViewBag.AWB
