--- a/Alicargo/Views/Broker/EditorTemplates/AwbBrokerModel.cshtml
+++ b/Alicargo/Views/Broker/EditorTemplates/AwbBrokerModel.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Alicargo.MvcHelpers
 @using Resources
-@model Alicargo.ViewModels.AirWaybill.BrokerAwbModel
+@model Alicargo.ViewModels.AirWaybill.AwbBrokerModel
 
 <div class="row">
 	<div class="span4">
