--- a/Alicargo/Views/Sender/ApplicationCreate.cshtml
+++ b/Alicargo/Views/Sender/ApplicationCreate.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Alicargo.MvcHelpers
 @using Resources
-@model ApplicationSenderEdit
+@model ApplicationSenderModel
 
 <h4 style="margin-top: 33px;" class="pull-right">@Entities.Nic: @ViewBag.Nic</h4>
 @Html.EditPage(Pages.ApplicationAdd, Url.Action(MVC.Sender.ApplicationCreate()), Pages.Save)
