--- a/Alicargo/Views/SenderAwb/Create.cshtml
+++ b/Alicargo/Views/SenderAwb/Create.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Alicargo.MvcHelpers
-@model Alicargo.ViewModels.AirWaybill.SenderAwbModel
+@model Alicargo.ViewModels.AirWaybill.AwbSenderModel
 
 @Html.EditPage(Resources.Pages.AirWaybillAdd, Url.Action(MVC.SenderAwb.Create()), Resources.Pages.AirWaybillAdd)
