--- a/Alicargo/Views/SenderAwb/Edit.cshtml
+++ b/Alicargo/Views/SenderAwb/Edit.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Alicargo.MvcHelpers
-@model Alicargo.ViewModels.AirWaybill.SenderAwbModel
+@model Alicargo.ViewModels.AirWaybill.AwbSenderModel
 
 @Html.EditPage("", Url.Action(MVC.SenderAwb.Edit()), Resources.Pages.Save)
