--- a/Alicargo/Views/AirWaybill/Create.cshtml
+++ b/Alicargo/Views/AirWaybill/Create.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Alicargo.MvcHelpers
-@model Alicargo.ViewModels.AirWaybill.AirWaybillEditModel
+@model Alicargo.ViewModels.AirWaybill.AwbAdminModel
 
 @Html.EditPage(Resources.Pages.AirWaybillAdd, Url.Action(MVC.AirWaybill.Create()), Resources.Pages.AirWaybillAdd)
