--- a/Alicargo/Views/SenderAwb/EditorTemplates/AwbSenderModel.cshtml
+++ b/Alicargo/Views/SenderAwb/EditorTemplates/AwbSenderModel.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Alicargo.MvcHelpers
 @using Resources
-@inherits Alicargo.MvcHelpers.BaseWebViewPage<Alicargo.ViewModels.AirWaybill.SenderAwbModel>
+@inherits Alicargo.MvcHelpers.BaseWebViewPage<Alicargo.ViewModels.AirWaybill.AwbSenderModel>
 
 @helper SelectBroker()
 {
